Revision history for {{$dist->name}}

{{$NEXT}}

1.14      2013-07-18 13:30:51 America/New_York
  - add cpan option for [Author::Plicease::Upload]
  - update init2 to reflect previous upload merge

1.12      2013-07-18 09:11:35 America/New_York
  - merge [Author::Plicease::UploadToCPAN] and [Author::Plicease::UploadToMatrix] into [Author::Plicease::Upload]

1.11      2013-07-10 07:03:39 EST5EDT
  - fix author section header in [Author::Plicease::Thanks]

1.10      2013-07-10 06:48:50 EST5EDT
  - add [Author::Plicease::Thanks]

1.09      2013-06-22 09:47:47 EST5EDT
  - add an installer option for [@Author::Plicease]

1.08      2013-06-21 21:54:48 EST5EDT
  - updated dep versions

1.07      2013-06-19 18:12:53 EST5EDT
  - added [Author::Plicease::PrePodWeaver]

1.06      2013-06-19 09:27:36 EST5EDT
  - require specific version of some plugins

1.05      2013-06-16 12:56:21 America/New_York
  - Fixed typo in Changes template

1.04      2013-06-14 17:42:07 EST5EDT
  - documentation

1.03      2013-06-12 09:41:04 EST5EDT
  - set release_tests = 0 if user says so during mint
  - include the .travis.yml file in the dist

1.02      2013-06-11 06:38:33 EST5EDT
  - generate a .travis.yml when minting a new dist
  - use the right version of [Auth::Plicease::UploadTo{CPAN,Matrix}]

1.01      2013-06-08 08:38:32 America/New_York
  - fixed use.t wheen More::Than::One::Double::Colen::Used

1.00      2013-06-07 14:52:43 EST5EDT
  - added [Author::Plicease::UloadToMatrix]

0.99      2013-06-05 14:55:56 EST5EDT
  - fix syntax error in generated file

0.98      2013-05-30 14:19:23 America/New_York
  - fix typo in blank release.yml

0.97      2013-05-30 05:51:27 EST5EDT
  - rm [Author::Plicease::Inc] as it was a mistake anyway
  - provide a basic release.yml if doesn't already exist
  - run release tests when releasing this dist

0.96      2013-05-30 04:58:00 America/New_York
  - use prove -b instead of prove -l for release tests

0.95      2013-05-29 16:54:54 America/New_York