@@ -34,6 +34,7 @@ This Dist::Zilla plugin bundle is the equivalent to
  [Author::Plicease::PrePodWeaver]
  [PodWeaver]
  [NextRelease]
+ format = %-9v %{yyyy-MM-dd}dT%{HH:mm:ssZ}d
  [AutoPrereqs]
  [OurPkgVersion]
  [MetaJSON]
