@@ -16,6 +16,8 @@ version = 1.14
 
 [PodWeaver]
 [NextRelease]
+format = %-9v %{yyyy-MM-dd}dT%{HH:mm:ssZ}d
+
 [AutoPrereqs]
 [OurPkgVersion]
 [MetaJSON]
