@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - use CPAN::Changes::Spec format for new entries in Changes
 
 1.14      2013-07-18 13:30:51 America/New_York
   - add cpan option for [Author::Plicease::Upload]
